dev-infrastructure/zz_fixture_TestHelmTemplate_dev_westus3_mgmt_1_arobit.yaml
---
# Source: arobit/templates/forwarder-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arobit-forwarder
  namespace: 'arobit'
  labels:
    app.kubernetes.io/name: arobit-forwarder
    app.kubernetes.io/instance: 'dev-westus3-mgmt-1-arobit'
    app: arobit-forwarder
spec:
  type: ClusterIP
  ports:
  - name: otlp-http
    port: 4318
    targetPort: otlp-http
    protocol: TCP
  - name: forward
    port: 24224
    targetPort: forward
    protocol: TCP
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
  selector:
    app.kubernetes.io/name: arobit-forwarder
    app.kubernetes.io/instance: 'dev-westus3-mgmt-1-arobit'
---
# Source: arobit/templates/forwarder-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: arobit-forwarder
  namespace: 'arobit'
  labels:
    app.kubernetes.io/name: arobit-forwarder
    app.kubernetes.io/instance: 'dev-westus3-mgmt-1-arobit'
    ## Istio Labels: https://istio.io/docs/ops/deployment/requirements/
    app: arobit-forwarder
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: arobit-forwarder
      app.kubernetes.io/instance: 'dev-westus3-mgmt-1-arobit'
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 100%
  template:
    metadata:
      labels:
        app.kubernetes.io/name: arobit-forwarder
        app.kubernetes.io/instance: 'dev-westus3-mgmt-1-arobit'
        app: arobit-forwarder
        azure.workload.identity/use: "true"
      annotations:
        checksum/configmap: 6cd105a5d137e52af9da24c7962786df326951dd5c98f24e2c93839bdc0a3e36
    spec:
      priorityClassName: service-lifecycle-critical
      serviceAccountName: 'arobit-forwarder'
      shareProcessNamespace: true
      containers:
        - name: fluentbit
          image: mcr.microsoft.com/oss/v2/fluent/fluent-bit@sha256:1234567890
          imagePullPolicy: 'IfNotPresent'
          command:
            - /fluent-bit/bin/fluent-bit
          args:
            - -c
            - /forwarder/etc/fluent-bit.conf
          ports:
            - name: http
              containerPort: 2020
              protocol: TCP
            - name: otlp-http
              containerPort: 4318
              protocol: TCP
            - name: forward
              containerPort: 24224
              protocol: TCP
            - name: metrics
              containerPort: 9090
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6
            successThreshold: 1
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsUser: 0
            runAsGroup: 0
            capabilities:
              drop: ['ALL']
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: var-kusto
              mountPath: /var/kusto
            - name: var-log
              mountPath: /var/log
            - name: machine-id
              mountPath: /etc/machine-id
              readOnly: true
            - name: flb-storage
              mountPath: /var/fluent-bit/flb-storage
            - name: var-lib-docker-containers
              mountPath: /var/lib/docker/containers
              readOnly: true
            - name: flb-config
              mountPath: /forwarder/etc
              readOnly: true
      terminationGracePeriodSeconds: 45
      tolerations:
      - effect: NoSchedule
        key: infra
        operator: "Equal"
        value: "true"
      volumes:
        - name: var-kusto
          emptyDir:
            sizeLimit: 12Gi
        - name: sp-host
          hostPath:
            type: Directory
            path: /etc/kubernetes/
        - name: flb-storage
          emptyDir: {}
        - name: machine-id
          hostPath:
            path: /etc/machine-id
        - name: var-log
          hostPath:
            path: /var/log
        - name: var-lib-docker-containers
          hostPath:
            path: /var/lib/docker/containers
        - name: cacrt-host
          hostPath:
            type: File
            path: /etc/ssl/certs/ca-certificates.crt
        - name: flb-config
          configMap:
            name: arobit-forwarder
            defaultMode: 0755
